--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
     
 
     <a class="h2" href="https://konigsbergrob.github.io/eyes"> Eyes Exercise Link! </a> <br> <br>
-    <img src="eyes.png" height="250" width="250"/>
+    <img src="eyes.png"/>
 
     <br><br><br>
     <div class="divider"> </div>
 
     <a class="h2" href="https://konigsbergrob.github.io/bus"> Real Time Bus Tracker Link! </a> <br> <br> 
-    <img src="map.png" height="250" width="700"/>
+    <img src="map.png"/>
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <h3><b>Feel free to contact me through the following methods:</b></h3>
