--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
 
     <a class="h2" href="https://konigsbergrob.github.io/eyes"> Eyes Exercise Link! </a> <br> <br>
-    <img src="eyes.png"/>
+    <img src="eyes.PNG"/>
 
     <br><br><br>
     <div class="divider"> </div>
