--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="divider"> </div>
 
     <a class="h2" href="https://konigsbergrob.github.io/bus"> Real Time Bus Tracker Link! </a> <br> <br> 
-    <img src="./map.png"/>
+    <img src="./map.PNG"/>
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <h3><b>Feel free to contact me through the following methods:</b></h3>
